[package]
name = "hanzo-compute"
description = "Hanzo AI - BitTorrent-style Decentralized Compute Protocol"
license = "MIT"
version = "1.1.21"
edition = "2021"
repository = "https://github.com/hanzonet/compute"
keywords = ["ai", "distributed", "bittorrent", "swarm", "p2p"]
categories = ["network-programming", "asynchronous"]
authors = ["Nico Arqueros <nico@hanzo.ai>"]

[features]
default = []
full = ["libp2p-transport"]
libp2p-transport = ["libp2p"]

[dependencies]

# Optional: libp2p for networking

[dependencies.libp2p]
version = "0.55.0"
features = ["noise", "yamux", "tcp", "quic", "dcutr", "identify", "ping", "relay", "request-response", "json", "tokio", "macros"]
optional = true

[dependencies.tracing]
version = "0.1.40"

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]
[dependencies.chrono]
version = "0.4"

[dependencies.dashmap]
version = "5.5.3"

[dependencies.async-trait]
version = "0.1.74"

[dependencies.rand]
version = "=0.8.5"

[dependencies.blake3]
version = "1.2.0"

[dependencies.thiserror]
version = "2.0.3"

[dependencies.tokio]
version = "1.36"
features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time"]

[dependencies.serde_json]
version = "1.0.117"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
[dev-dependencies]
[dev-dependencies.tempfile]
version = "3.19"


[dev-dependencies.tokio]
version = "1.36"
features = ["full", "test-util"]